# NurbsLang

./: .gitignore  LBracket.n  README.md  index.html
.github/workflows/: deploy.yml
assets/: index-CiKBJv-p.js  index-K76ITvgW.js
docs/: index.html
docs/assets/: index-3bI8uvHD.js  index-CDMsMy9b.css  index-CjgsQW_h.js  index-D2OnKpHv.css  index-ZOOaIXl7.js  index-tgNrshTT.js  index-xrlFS-AC.js
nurbs/: CMakeLists.txt  build.sh  build_new.sh  primitives.cpp  sample_volume.stl  sample_volume1.stl  sample_volume_r0.stl  sample_volume_r1.stl  sample_volume_r2.stl  sample_volume_r3.stl  sample_volume_r4.stl  sample_volume_r5.stl  sample_volume_r6.stl  sample_volume_r7.stl  sample_volume_r8.stl  sample_volume_r9.stl
nurbs-lang-editor/: index.html  localhost+2-key.pem  localhost+2.pem  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
nurbs-lang-editor/src/: App.tsx  NurbsRayCast.wgsl  NurbsViewer.tsx  Render.wgsl  RenderingContext.tsx  WasmContext.tsx  emscripten.cpp  language.ts  main.tsx  transpile.ts
nurbs/build-native/: CMakeCache.txt  Makefile  cmake_install.cmake  nurbs
nurbs/build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  nurbs.js  nurbs.wasm
nurbs/build-wasm/gismo/: CMakeCache.txt  CTestCustom.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Eigen  Makefile  cmake_install.cmake  gismo.pc  gismoConfig.cmake  gismoConfigVersion.cmake  gismoTargets.cmake
nurbs/build-wasm/gismo/config/: jit.xml
nurbs/build-wasm/gismo/doc/: CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake
nurbs/build-wasm/gismo/doc/pygismo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
nurbs/build-wasm/gismo/doc/snippets/: CTestTestfile.cmake  Makefile  bivariate_basis.cpp  bspline_basis.cpp  bspline_basiseval.cpp  bspline_cube.cpp  bspline_greville.cpp  bspline_vecxmat.cpp  cmake_install.cmake
nurbs/build-wasm/gismo/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
nurbs/build-wasm/gismo/gsCore/: gsConfig.h  gsConfig_install.h  gsExport.h
nurbs/build-wasm/gismo/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
nurbs/src/: boundary.h  boundary_condition.h  construct.cpp  construct.h  emscripten.cpp  fea.cpp  fea.h  main.cpp  material.cpp  material.h  material.hpp  mesh.c  mesh.cpp  mesh.h  nurbs.cpp  nurbs.h  nurbs.hpp  nurbs_evaluate.h  nurbs_evaluate.hpp  nurbs_export.cpp  nurbs_export.h  nurbs_include.h  nurbs_operations.h  nurbs_refine.h  optimization.cpp  optimization.h  outline.h  primitives.cpp  primitives.h  transformations.cpp  transformations.h  transformations.hpp
presentation/: package-lock.json  package.json  vite.config.ts
presentation/public/editor/: index.html
presentation/src/: App.css  App.tsx  main.tsx
presentation/src-tauri/: Cargo.toml  tauri.conf.json
presentation/src-tauri/src/: main.rs
presentation/src/slides/: Slides.tsx  language.ts  light.json
